[package]
name = "bevy_mouse_tracking_plugin"
description = "A plugin for effortless mouse tracking in the bevy game engine."
version = "0.7.0"
authors = ["JoJoJet <joe102000@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JoJoJet/bevy-mouse-tracking"
keywords = ["gamedev", "bevy", "mouse", "input"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_core_pipeline", "bevy_render", "bevy_window"]

[dev-dependencies.bevy]
features = [
    "bevy_core_pipeline",
    "bevy_window",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "png",
    "bevy_asset",
    "bevy_winit",
    "x11",
]
version = "0.15"
default-features = false
